2005-05-16  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/nfs_subr.c: use [1] for out-of-band pointer at the end of
	struct am_fh, because it's the most portable method.  Bug fix
	suggestion from Dan Riley <dsr at mail.lns.cornell.edu>.

	* amd/amfs_generic.c (amfs_lookup_mntfs): reset currently used
	def_opts to options given in -opts, appended with the /default
	options.  Bug fix suggestion from Dan Riley <dsr at
	mail.lns.cornell.edu>.

2005-05-13  Erez Zadok  <ezk@cs.sunysb.edu>

	*******************************************************************
	*** Released am-utils-6.1-rc4					***
	*******************************************************************

2005-05-11  Daniel P. Ottavio  <dottavio@ic.sunysb.edu>

	* amd/amd.c (main) : fixed memory leak detected by valgrind

	* amd/info_ldap.c (amu_ldap_init) : fixed memory leak detected by
	valgrind

2005-05-11  Erez Zadok  <ezk@cs.sunysb.edu>

	* m4/macros/{check_checkmount_style.m4, check_mnttab_style.m4,
	check_nfs_fh_dref.m4, check_nfs_prot_headers.m4,
	check_nfs_sa_dref.m4, check_umount_style.m4, os_cflags.m4}: check
	for "macosx" as valid OS string, so we compile properly on Darwin
	systems.

	*******************************************************************
	*** Released am-utils-6.1-rc3					***
	*******************************************************************

	* rerun bootstrap to get a working configure script that actually
	checks for limits.h and dependent linux autofs/nfs headers.

	* configure.in: remove redundant check for limits.h.

2005-05-09  Erez Zadok  <ezk@cs.sunysb.edu>

	*******************************************************************
	*** Released am-utils-6.1-rc2					***
	*******************************************************************

2005-05-08  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/amfs_generic.c (amfs_lookup_mntfs): removed redundant use of
	old_def_opts variable.

2005-05-08  Daniel P. Ottavio  <dottavio@ic.sunysb.edu>
